--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -399,7 +399,7 @@
  CUB_anti_lgbtqa_idea_nati: "Anti-LGBT Propaganda"
  CUB_patrotism_idea: "Revival of Cuban Patriotism"
  CUB_militarism_idea: "Active Promotion of Patriotism and Militarism"
- CUB_youth_labour_nati_idea: "New Youth Labour Army"
+ CUB_youth_labour_nati_idea: "Nationalist Youth Labour Army"
  CUB_greater_spanish_alliacne_idea: "Great Spanish Alliance Member"
  CUB_idea_democrats_in_power: "Democratic Cuban policy"
  CUB_idea_democrats_start_ref: "Democratic Cuban policy"
@@ -656,8 +656,8 @@
  CUB_venesuella_brothers_desc: "Venezuela and Cuba are fraternal peoples that must live in peace and prosperity."
  CUB_venesuella_defence: "Mutual Defense with Venezuela "
  CUB_venesuella_defence_desc: "The Cuban Army and the Venezuelan Army should help each other in the event of a major conflict, the exchange of experience and officers will help our countries repel the attack of a potential enemy."
- CUB_Guantanamo_question: "Solve the Guantanamo Issue"
- CUB_Guantanamo_question_desc: "Guantanamo is our territory that was illegally occupied by the US. We should try to regain it diplomatically."
+ CUB_guantanamo_question: "Solve Guantanamo Question"
+ CUB_guantanamo_question_desc: "Guantanamo is our territory, which is currently occupied by US imperialists. We need to take it back to our homeland."
  CUB_police_exp: "Expand Police Influence"
  CUB_police_exp_desc: "Our country will be safer with police and we can better control all opposition."
  CUB_put_natoinalist_in_jail: "Put Nationalist in Jail"
