Fixed national wellbeing interface
Fixed interface and improved wellbeing variables, rework underway for military tree, cut down on idea amounts, added manual refresh focus

--- a/localisation/english/MD_focus_GRN_l_english.yml
+++ b/localisation/english/MD_focus_GRN_l_english.yml
@@ -12,8 +12,8 @@
  GRN_Greenlandic_Army:0 "Greenlandic Army"
  GRN_Greenlandic_Army_desc:0 "The Armed Forces of Greenland is limited by the amount of people who can join the army. But this only motivates us to improving the quality and investments of the services and equipment in our army"
  
- GRN_Danish_control_over_foreign_policy:0 "Danish control over Foreign Affairs"
- GRN_Danish_control_over_foreign_policy_desc:0 "Greenlandic foreign policy is being controled by Denmark so we can't hold our own foreign policy"
+ GRN_Danish_Diplomatic_Dependency:0 "Danish control over Foreign Affairs"
+ GRN_Danish_Diplomatic_Dependency_desc:0 "Greenlandic foreign policy is being controled by Denmark so we can't hold our own foreign policy"
  
  GRN_uneducated_population:0 "Uneducated Population"
  GRN_uneducated_population_desc:0 "With the nation not having many high quality, academic institutions, only a small portion of the population has opportunities for higher education"
@@ -37,9 +37,9 @@
  
  GRN_army_upgrade_tt:0 "If you have §GGreenlandic army§! national spirit, it will be §GImproved§!"
  
- GRN_our_own_forgein_ministry:0 "Our own Foreign Ministry"
+ GRN_Diplomacy_Independence:0 "Our own Foreign Ministry"
  
- GRN_creating_forgein_ministry:0 "Creating Foreign Ministry"
+ GRN_Creating_Foreign_Ministry:0 "Creating Foreign Ministry"
  
  GRN_Extremely_High_Alcohol_Abuse:0 "Extremely High Alcohol Abuse"
  GRN_Extremely_High_Alcohol_Abuse_desc:0 "For the longest of time, alcohol abuse has long been a major point of contention within Greenlandic society. Its a burden on national heathcare resources and spreads misery across all corners of society.\nCurrent: [?GRN.alcohol_abuse_var|0-]"
@@ -93,13 +93,13 @@
  GRN_national_wellbeing:0 "National Wellbeing"
  GRN_remove_alcohol_abuse_tt:0 "Remove your current idea with §YGreenlandic Alcohol Abuse§!\n"
  GRN_modify_alcohol_abuse_tt:0 "Greenlandic alcohol abuse changes by [?GRN.modify_alcohol_abuse|0=-] (Current: [?GRN.alcohol_abuse_var|0-])"
- GRN_alcohol_abuse:0 "Greenlandic Alcohol Abuse"
- GRN_alcohol_abuse_tt:0 "Alcohol Abuse: [?GRN.alcohol_abuse_var|0-])"
+ GRN_alcohol_abuse_tt:0 "Greenlandic Alcohol Abuse"
+ GRN_alcohol_abuse_info_tt:0 "Alcohol Abuse: [?GRN.alcohol_abuse_var|0-]"
 
  GRN_remove_unalive_tt:0 "Remove your current idea with §YGreenlandic Self-Harm§!\n"
  GRN_modify_unalive_tt:0 "Greenlandic self-harm changes by [?GRN.modify_unalive|0=-] (Current: [?GRN.unalive_var|0-])"
- GRN_unalive:0 "Greenlandic Self-Harm"
- GRN_unalive_tt:0 "Self-Harm: [?GRN.unalive_var|0-])"
+ GRN_unalive_tt:0 "Greenlandic Self-Harm"
+ GRN_unalive_info_tt:0 "Self-Harm: [?GRN.unalive_var|0-]"
 
  ############
  ## EVENTS ##
@@ -229,6 +229,13 @@
  #Nat_Autocracy - Armed Forces of Greenland
  #Monarchist - Danish Crown
 
+ #############
+ ## REFRESH ##
+ #############
+
+ GRN_Refresh_Focus:0 "Refresh Focus"
+ GRN_Refresh_Focus_desc:0 "Use this focus to refresh the tree if nothing appears. This focus will Unlock itself instantly."
+
  ##########
  ## ARMY ##
  ##########
@@ -281,6 +288,25 @@
  GRN_Expand_Kangerlussuaq_Airport_desc:0 "Kangerlussuaq airport is the largest air transport hub on the island. Investing in it would allow us to stock more planes and facilitate international flights more easily."
  
  #############
+ ## NUCLEAR ##
+ #############
+
+ GRN_Recover_B52_Thermonuclear_Arm:0 "Recovering the B52 Thermonuclear Arm"
+ GRN_Recover_B52_Thermonuclear_Arm_desc:0 "In the 1950's and 60's, the United States operated a series of B52 Stratofortresses and had them fly constently above the arctic with nuclear weapons in a command known as Operation Chrome Dome. In 1968, one of those armed Stratofortesses crashed down upon attempting to land at Thule air base. During the crash, the 4 50KT nuclear weapons were either lost or destroyed. Thankfully 3 of the weapons were recovered, but one still lays missing. If we can find it and refurbish it, we can try to use that one nuclear weapon as a deterrent for harmful activities by encroching superpowers."
+
+ GRN_Buy_Spare_Parts:0 "Buying Spare Parts"
+ GRN_Buy_Spare_Parts_desc:0 "To further develop our nuclear refurbishing program, we must try to obtain parts and machinery in order to recreate or restore the weapons we plan on using."
+
+ GRN_Project_N:0 "Project Nuutuittuq"
+ GRN_Project_N_desc:0 "Nuutuittuq is the name of the North Pole star, Polaris. As a tribute to such, we shall name our ballistic missile program after it since we are trying to recreate the UGM-27 Polaris Missile. Playing with nuclear fire in the winter doesnt scare us."
+
+ GRN_Project_S:0 "Project Sanna"
+ GRN_Project_S_desc:0 "Sanna or Sedna is the name of the Inuit goddess of the sea and master of marine life. As a tribute to her role as an important source of substinance, we shall name our ballistic submarine program in honour her."
+
+ GRN_Project_Ice_Shield:0 "Ice Shield"
+ GRN_Project_Ice_Shield_desc:0 "It's now time to put our work to the test. Let us show the world what we wea are capble of when we can properly handle a nuclear weapon asnd use it as a tool for diplomacy and proctection of the interst of the indigenous peoples of the Arctic"
+
+ #############
  ## ECONOMY ##
  #############
 
@@ -311,6 +337,9 @@
  GRN_Civilian_Industry_Focus:0 "Civilian Industry Focus"
  GRN_Civilian_Industry_Focus_desc:0 "We'll focus on expanding civilian industry in Greenland"
  
+ GRN_Balanced_Industrial_Focus:0 "Balanced Industry Focus"
+ GRN_Balanced_Industrial_Focus_desc:0 "We need to take a more carefully planned apporch to our industrial potential."
+
  GRN_Military_Industry_Focus:0 "Military Industry Focus"
  GRN_Military_Industry_Focus_desc:0 "We don't have a military industry, but the situation in the world is changing so we should focus on creating a military industry for Greenland"
 
@@ -365,7 +394,7 @@
  GRN_help_for_small_buisnesses_desc:0 "Small buiseneeses are the one who needs our help the most."
  
  GRN_Nordic_Immigrants:0 "Accept Only Nordic Immigrants"
- GRN_Nordic_Immigrants_desc:0 "Immigrants = bad. The only time that this is not true is if, those immigrating are coming from the heart of the Danish Realm." 
+ GRN_Nordic_Immigrants_desc:0 "Immigrants = bad. The only time this is not true is if the immigrants coming over are from the nordic nations." 
  
  GRN_General_Policies:0 "Collaborative Policies"
  GRN_General_Policies_desc:0 "We must work together as a nation in order to resolve general problems that we are facing."
@@ -380,11 +409,11 @@
  GRN_Foreign_Policy:0 "Foreign Affairs Focus"
  GRN_Foreign_Policy_desc:0 "Greenland isn't the only place in the world, in fact we're pretty small country so we should focus on getting allign with other nations."
  
- GRN_establish_our_own_forgein_ministry:0 "Establish Our Own Foreign Ministry "
- GRN_establish_our_own_forgein_ministry_desc:0 "we have been dependent on Denmark as people who will represent our nation on the world stage, but the times have changed, and Denmark is no longer needed as our overlords. It's finnaly time to start going the long way of becoming indepndent "
+ GRN_Independent_Foreign_Policy:0 "Establish Our Own Foreign Ministry "
+ GRN_Independent_Foreign_Policy_desc:0 "we have been dependent on Denmark as people who will represent our nation on the world stage, but the times have changed, and Denmark is no longer needed as our overlords. It's finnaly time to start going the long way of becoming indepndent "
  
- GRN_depend_on_Denmark:0 "Countinue Dependence on Denmark"
- GRN_depend_on_Denmark_desc:0 "We have been part of Denamrk for too long, so we can't ust leave them like that, we should increase our ties with the mainland"
+ GRN_Danish_Foreign_Policy:0 "Countinue Dependence on Denmark"
+ GRN_Danish_Foreign_Policy_desc:0 "We have been part of Denamrk for too long, so we can't ust leave them like that, we should increase our ties with the mainland"
  
  GRN_Russian_Ties:0 "Russian Ties"
  GRN_Russian_Ties_desc:0 "Russia could be an important partner, if we strenghten out ties with them."
@@ -393,7 +422,7 @@
  GRN_Russian_Investors_desc:0 "Inviting Russian investors could help expand our economy."
  
  GRN_Soviet_Army_Discipline:0 "Russian Army Discipline"
- GRN_Soviet_Army_Discipline_desc:0 "Russian army is one of the biggest and most discipline armies in the world, and we could learn from that"
+ GRN_Soviet_Army_Discipline_desc:0 "The Russian army is one of the biggest armies in the world with a tradition dating back hundreds of years. We could probably learn something from the accumulation of knowledge the Russians have to offer."
  
  GRN_American_Ties:0 "American Ties"
  GRN_American_Ties_desc:0 "America is our partner, and they have helped us many times, we should invest in making them our closer friends"
@@ -417,13 +446,13 @@
  GRN_trade_with_nordic_council_desc:0 "After we have increased and strenghten our relations with other countries participating in the Nordic council, the time has came to increase our exports and imports from both us and them. "
 
  GRN_NAPA:0 "NAPA"
- GRN_NAPA_desc:0 "NAPA will be an institute created by the Nordic council. It's goal is to promote Nordic culture around Greenland"
+ GRN_NAPA_desc:0 "NAPA will be an institute created by the Nordic council. It's goal is to promote Scandinavian culture and cooperative identity in Greenland."
  
  GRN_Nordic_immigrants:0 "Nordic Immigrants"
- GRN_Nordic_immigrants_desc:0 "We need to embrance Nordic culture and countinue our cooperation, we need to increase number of immigrants that are Nords in our country"
+ GRN_Nordic_immigrants_desc:0 "We need to embrance Nordic culture and countinue our cooperation, we need to increase number of scandinavian immigrants in our country."
  
- GRN_economic_integration:0 "Economic Integration"
- GRN_economic_integration_desc:0 ""
+ GRN_Economic_Integration:0 "Economic Integration"
+ GRN_Economic_Integration_desc:0 ""
  
  GRN_Danish_ties:0 "Danish ties"
  GRN_Danish_ties_desc:0 "We need to decide future of our relations with our overlords, Denmark"
