--- a/Changelog.txt
+++ b/Changelog.txt
@@ -49,6 +49,7 @@ v1.10.0
   - Fixed AI designing non-producable PLZ-05
   - Fixed Polish AI getting stuck while doing focuses
   - Fixed Polish AI leaving CSTO in Korwin path
+  - Fixed employment modifiers not working correctly for offices
 
  Content:
   - NEW TREE: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
