--- a/Changelog.txt
+++ b/Changelog.txt
@@ -50,6 +50,7 @@ v1.10.0
   - Fixed Polish AI getting stuck while doing focuses
   - Fixed Polish AI leaving CSTO in Korwin path
   - Fixed employment modifiers not working correctly for offices
+  - Fixed Quebec completely erasing CAN cores on rebelling
 
  Content:
   - NEW TREE: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
