--- a/localisation/english/MD_money_l_english.yml
+++ b/localisation/english/MD_money_l_english.yml
@@ -177,20 +177,20 @@
  gdp_per_capita_country_modifiers: "GDP per Capita"
 
  # GDP per Capita Marks
- 2_per_capita_or_more_tt: "More than $$§Y2000§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
- 3_per_capita_or_more_tt: "More than $$§Y3000§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
- 4_per_capita_or_more_tt: "More than $$§Y4000§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
- 5_per_capita_or_more_tt: "More than $$§Y5000§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
- 6_per_capita_or_more_tt: "More than $$§Y6000§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
- 7_per_capita_or_more_tt: "More than $$§Y7000§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
- 8_per_capita_or_more_tt: "More than $$§Y8000§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
- 9_per_capita_or_more_tt: "More than $$§Y9000§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
- 10_per_capita_or_more_tt: "More than $$§Y10000§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
- 15_per_capita_or_more_tt: "More than $$§Y15000§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
- 20_per_capita_or_more_tt: "More than $$§Y20000§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
- 25_per_capita_or_more_tt: "More than $$§Y25000§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
- 30_per_capita_or_more_tt: "More than $$§Y30000§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
- 40_per_capita_or_more_tt: "More than $$§Y40000§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 2_per_capita_or_more_tt: "More than $$§Y2000§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 3_per_capita_or_more_tt: "More than $$§Y3000§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 4_per_capita_or_more_tt: "More than $$§Y4000§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 5_per_capita_or_more_tt: "More than $$§Y5000§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 6_per_capita_or_more_tt: "More than $$§Y6000§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 7_per_capita_or_more_tt: "More than $$§Y7000§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 8_per_capita_or_more_tt: "More than $$§Y8000§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 9_per_capita_or_more_tt: "More than $$§Y9000§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 10_per_capita_or_more_tt: "More than $$§Y10000§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 15_per_capita_or_more_tt: "More than $$§Y15000§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 20_per_capita_or_more_tt: "More than $$§Y20000§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 25_per_capita_or_more_tt: "More than $$§Y25000§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 30_per_capita_or_more_tt: "More than $$§Y30000§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 40_per_capita_or_more_tt: "More than $$§Y40000§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
 
  # Total GDP Marks
 
