--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -3432,56 +3432,55 @@
 
  ### Ukraine ###
  #Western
- UKR.conservatism: "£ukr_pmu PMU"
- UKR.conservatism_icon: "£ukr_pmu"
- UKR.conservatism_desc: "(Western Conservatives) £ukr_pmu People's Movement of Ukraine - is a centre-right political party. Initially organized as the People's Movement of Ukraine for Reconstruction (i.e. for Perestroika), Rukh was founded in 1989 as a civil-political movement as there were no other political parties allowed in the Soviet Union but the Communist Party. The organization has its roots in Ukrainian dissidents — the most notable of them being Viacheslav Chornovil."
- UKR.conservatism_2017: "£ukr_civil_position Civil Position"
- UKR.conservatism_2017_icon: "£ukr_civil_position"
- UKR.conservatism_2017_desc: "(Western Conservatives) £ukr_civil_position Civil Position is a political party in Ukraine registered in March 2005 and led by former Minister of Defence of Ukraine Anatoliy Hrytsenko. Concerning the ongoing War in Donbass the party advocates an end to the conflict by use of force."
- UKR.liberalism: ""
- UKR.liberalism_desc: ""
- UKR.liberalism_2017: "£ukr_mnf New Forces"
- UKR.liberalism_2017_icon: "£ukr_mnf"
- UKR.liberalism_2017_desc: "(Liberals) £ukr_mnf Movement of New Forces - is a Ukrainian political party registered in February 2017 that was formed by Mikheil Saakashvili. In April 2017 party leader Saakashvili proposed building of a large wall to \"temporarily isolate ourselves\" from the separatist Donetsk People's Republic and Luhansk People's Republic in order to «concentrate on the rest of Ukraine». Saakashvili is confident in the return under control of the Ukrainian Government of these separatist territories, but only «after we defeat corruption and begin rapid development."
- UKR.liberalism_2017_2: "£ukr_servant_of_the_people Servant of the People"
- UKR.liberalism_2017_2_icon: "£ukr_servant_of_the_people"
- UKR.liberalism_2017_2_desc: "Liberal - £ukr_servant_of_the_people Formed in late 2017, the Servant of the People party is named after the hit TV show of the same name. The party is predominantly focused on big tent populist policies, along with a Pro-European foreign policy the party is making a particular effort to halt corruption within Ukraine and bring more direct democracy to the country."
- UKR.socialism: ""
- UKR.socialism_desc: ""
- UKR.socialism_2017: "£ukr_justice Justice Party"
- UKR.socialism_2017_icon: "£ukr_justice"
- UKR.socialism_2017_desc: "(Social Democracy) £ukr_justice Formerly Party of All-Ukrainian Union of the Left \"Justice\" is a left-wing political party in Ukraine. The party merged into the new party United Left and Peasants in December 2011. Justice Party leader Stanislav Nikolaenko became the first party leader of United Left and Peasants. United Left and Peasants changed its name to Justice Party in 2014."
- UKR.Western_Autocracy: ""
+ UKR.Western_Autocracy: "£UKR_western_autocracy Partiya Zakhysnykiv Vitchizni"
+ UKR.Western_Autocracy_icon: "£UKR_western_autocracy"
  UKR.Western_Autocracy_desc: ""
+ UKR.Western_Autocracy_maidan: "£UKR_western_autocracytwo Narodnyy Front"
+ UKR.Western_Autocracy_maidan_icon: "£UKR_western_autocracytwo"
+ UKR.Western_Autocracy_maidan_desc: ""
+ UKR.liberalism: "£ukr_solidarity BPP \"Solidarnist'\""
+ UKR.liberalism_icon: "£ukr_solidarity"
+ UKR.liberalism_desc: "(Western Conservatives) £ukr_solidarity  Petro Poroshenko Bloc «Solidarity» - is a political party in Ukraine, formed on 27 August 2014. However, it has its roots in a parliamentary group called Solidarity dating from 2000 and has existed since in various forms as a political outlet for Petro Poroshenko. The party officially decries populism and advocates for pragmatism and realism. Membership of Ukraine in the European Union, welfare and social protection for poor citizens. But actually remains populist Poroshenko's pocket party."
+ UKR.liberalism_two: "£ukr_yes Yevropeys'ka Solidarnist'"
+ UKR.liberalism_two_icon: "£ukr_yes"
+ UKR.liberalism_two_desc: "(Western Conservatives) £ukr_solidarity  European Solidarity - is a political party in Ukraine, formed on 27 August 2014. However, it has its roots in a parliamentary group called Solidarity dating from 2000 and has existed since in various forms as a political outlet for Petro Poroshenko. The party officially decries populism and advocates for pragmatism and realism. Membership of Ukraine in the European Union, welfare and social protection for poor citizens. But actually remains populist Poroshenko's pocket party."
+ UKR.conservatism: "£ukr_fatherland \"Bat'kivshchyna\""
+ UKR.conservatism_icon: "£ukr_fatherland"
+ UKR.conservatism_desc: "(Western Conservatives) On 9 July 1999, based on the parliamentary group and smaller party, a new political party – All-Ukrainian Union «Fatherland» – was founded its constituent congress. The party sees Ukrainian membership in the European Union as a strategic goal. It favors visa-free travel for Ukrainians to the EU and wants to cancel «humiliating visa regimes»."
+ UKR.socialism_2: "£ukr_servant_of_the_people Sluha Narodu"
+ UKR.socialism_2_icon: "£ukr_servant_of_the_people"
+ UKR.socialism_2_desc: "Social Democracy - £ukr_servant_of_the_people Formed in late 2017, the Servant of the People party is named after the hit TV show of the same name. The party is predominantly focused on big tent populist policies, along with a Pro-European foreign policy the party is making a particular effort to halt corruption within Ukraine and bring more direct democracy to the country."
+ UKR.socialism: "£ukr_sdpu SDPU(o)"
+ UKR.socialism_icon: "£ukr_sdpu"
+ UKR.socialism_desc: ""
+ UKR.socialism_2017: "£ukr_groysman Ukrains'ka Stratehiia Hroismana"
+ UKR.socialism_2017_icon: "£ukr_groysman"
+ UKR.socialism_2017_desc: "(Social Democracy) £ukr_justice Formerly Party of All-Ukrainian Union of the Left \"Justice\" is a left-wing political party in Ukraine. The party merged into the new party United Left and Peasants in December 2011. Justice Party leader Stanislav Nikolaenko became the first party leader of United Left and Peasants. United Left and Peasants changed its name to Justice Party in 2014."
  #Emerging
- UKR.Communist-State: "£ukr_cpu CPU"
+ UKR.Communist-State: "£ukr_cpu KPU"
  UKR.Communist-State_icon: "£ukr_cpu"
  UKR.Communist-State_desc: "(Communists) £ukr_cpu With fall of the Soviet Union, the party's predecessor, Communist Party of Ukraine (Soviet Union), was banned previously in 1991 reforming into Socialist Party of Ukraine. Between 1991 and 1993, several small communist organizations were created throughout Ukraine. \"Without clear legality\" communists from all over Ukraine convened on 6 March 1993 for the All-Ukrainian Conference for Communists in an attempt to reestablish the KPU. In reaction the Verkhovna Rada, two months later, legalized the establishment of communist parties."
- UKR.Conservative: "£ukr_regions PRRU"
- UKR.Conservative_icon: "£ukr_regions"
+ UKR.Conservative: "£UKR_emerging_kuchma Za Yedynu Ukrayinu!"
+ UKR.Conservative_icon: "£UKR_emerging_kuchma"
  UKR.Conservative_desc: "(Emerging Conservatives) £ukr_regions Party of Regional Revival of Ukraine is a pro-Russian political party created in late 1997. The party asserts it has a pragmatic approach to Ukrainian EU membership with respect to the country's foreign economic interests; it supports «to walk the path of European integration and the implementation of respective standards in the social and economic spheres». Yet, given the European financial crisis, the party sees the issue of Ukraine's accession to the EU as «purely theoretical.»"
  UKR.Conservative_2001: "£ukr_regions Party of Regions"
  UKR.Conservative_2001_icon: "£ukr_regions"
  UKR.Conservative_2001_desc: "(Emerging Conservatives)  £ukr_regions  Party of Regions is a pro-Russian political party created in late 1997. The party asserts it has a pragmatic approach to Ukrainian EU membership with respect to the country's foreign economic interests; it supports «to walk the path of European integration and the implementation of respective standards in the social and economic spheres». Yet, given the European financial crisis, the party sees the issue of Ukraine's accession to the EU as «purely theoretical.»"
- UKR.Conservative_2017: "£ukr_opposition Opposition Bloc"
+ UKR.Conservative_2017: "£ukr_opposition Opozytsiyna platforma - Za zhyttya"
  UKR.Conservative_2017_icon: "£ukr_opposition"
  UKR.Conservative_2017_desc: "(Emerging Conservatives)  £ukr_opposition  Opposition Bloc is a Ukrainian political party that was founded in 2014 as six parties that did not endorse Euromaidan merged. The party's 2014 election programme was socially liberal and pro-Russophone. Block platform envisages protecting the status of Russian as a regional language, wants \"maximum decentralization\" for Ukraine, non-aligned status and wants to prevent it from becoming a NATO member."
- UKR.Autocracy: ""
+ UKR.Autocracy: "£ukr_Feminist-Neo-Pegan-Stalinism \"Narodna Opoziciya\""
+ UKR.Autocracy_icon: "£ukr_Feminist-Neo-Pegan-Stalinism"
  UKR.Autocracy_desc: ""
- UKR.Vilayat_e_Faqih: ""
- UKR.Vilayat_e_Faqih_desc: ""
- UKR.Mod_Vilayat_e_Faqih: ""
- UKR.Mod_Vilayat_e_Faqih_desc: ""
- UKR.anarchist_communism: ""
+ UKR.anarchist_communism: "£UKR_anarchism_communism Soyuz Livykh Syl"
+ UKR.anarchist_communism_icon: "£UKR_anarchism_communism"
  UKR.anarchist_communism_desc: ""
- #Salafist
- UKR.Caliphate: ""
- UKR.Caliphate_desc: ""
  #Non-alligned
- UKR.Neutral_conservatism: "£ukr_fatherland Fatherland"
- UKR.Neutral_conservatism_icon: "£ukr_fatherland"
- UKR.Neutral_conservatism_desc: "(Non-alligned Conservatives)  £ukr_fatherland  On 9 July 1999, based on the parliamentary group and smaller party, a new political party – All-Ukrainian Union «Fatherland» – was founded its constituent congress. The party sees Ukrainian membership in the European Union as a strategic goal. It favors visa-free travel for Ukrainians to the EU and wants to cancel «humiliating visa regimes»."
- UKR.oligarchism: ""
+ UKR.Neutral_conservatism: "£ukr_pmu PMU"
+ UKR.Neutral_conservatism_icon: "£ukr_pmu"
+ UKR.Neutral_conservatism_desc: "£ukr_pmu People's Movement of Ukraine - is a centre-right political party. Initially organized as the People's Movement of Ukraine for Reconstruction (i.e. for Perestroika), Rukh was founded in 1989 as a civil-political movement as there were no other political parties allowed in the Soviet Union but the Communist Party. The organization has its roots in Ukrainian dissidents — the most notable of them being Viacheslav Chornovil."
+ UKR.oligarchism: "£ukr_udar UDAR Vitaliya Klitschka"
+ UKR.oligarchism_icon: "£ukr_udar UDAR Vitaliya Klitschka"
  UKR.oligarchism_desc: ""
  UKR.oligarchism_2017: "£ukr_solidarity BPP «Solidarity»"
  UKR.oligarchism_2017_icon: "£ukr_solidarity"
@@ -3494,14 +3493,20 @@
  UKR.Neutral_Libertarian_2017: "£ukr_five_ten 5.10"
  UKR.Neutral_Libertarian_2017_icon: "£ukr_five_ten"
  UKR.Neutral_Libertarian_2017_desc: "(Libertarians)  £ukr_five_ten  5.10 is a Ukrainian libertarian party, registered on 20 March 2014. The main idea of party is a radical reform of the taxation of Ukraine: full abolition of the current system and introduction of a single tax system – 5% sales tax and 10% payroll tax. The main objective of the party is to tackle poverty and governmental control in Ukraine."
- UKR.Neutral_Autocracy: ""
+ UKR.Neutral_Autocracy: "£UKR_neutral_internet Internet-Partiya Ukrayiny"
+ UKR.Neutral_Autocracy_icon: "£UKR_neutral_internet"
  UKR.Neutral_Autocracy_desc: ""
- UKR.Neutral_Communism: ""
+ UKR.Neutral_Autocracy_shariy: "£ukr_shariy Partiya Shariya"
+ UKR.Neutral_Autocracy_shariy_icon: "£ukr_shariy"
+ UKR.Neutral_Autocracy_shariy_desc: ""
+ UKR.Neutral_Communism: "£UKR_neutral_communism Spilka Komunistiv Ukrayiny"
+ UKR.Neutral_Communism_icon: "£UKR_neutral_communism"
  UKR.Neutral_Communism_desc: ""
  UKR.Neutral_green: "£ukr_greens PGU"
  UKR.Neutral_green_icon: "£ukr_greens"
  UKR.Neutral_green_desc: "(Greens)  £ukr_greens  Party of Greens of Ukraine is a successor of the Green World Association (founded December 1987) and under that name participated in the Ukrainian parliamentary elections of 1990 as part of the Democratic Bloc. Its main priorities are the alteration of anti-ecological attitudes in the economic system, the reconstruction of the social system, and the protection of human rights."
- UKR.Neutral_Muslim_Brotherhood: ""
+ UKR.Neutral_Muslim_Brotherhood: "£UKR_neutral_muslim Milliy Fırqa"
+ UKR.Neutral_Muslim_Brotherhood_icon: "£UKR_neutral_muslim"
  UKR.Neutral_Muslim_Brotherhood_desc: ""
  #Nationalist
  UKR.Nat_Autocracy: ""
