--- a/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
@@ -291,92 +291,92 @@
  CUB_our_projects_idea: "我们的工程"
  CUB_disorg_in_army_idea_1: "过时的军事力量"
  CUB_disorg_in_army_idea_1_desc: "曾经强大的古巴军队，现在却成了一个悲伤的倒影。事情需要改变。你可以通过军事改革来消除这个国家精神。"
- CUB_disorg_in_army_idea2: "过时的军事力量"
- CUB_disorg_in_army_idea3: "过时的军事力量"
- CUB_disorg_in_army_idea4: "过时的军事力量"
+ CUB_disorg_army_idea: "过时的军事力量"
+ CUB_disorgonisation_in_army_idea: "过时的军事力量"
+ CUB_disorgonis_in_army_idea: "过时的军事力量"
  CUB_general_field_idea: "大规模战场演习"
  CUB_long_training_idea: "广泛的的军事演习"
  CUB_modern_army_idea: "现代古巴军队"
  CUB_reforming_army_idea: "改革军队"
- CUB_reforming_army_idea2: "改革军队"
+ CUB_reform_army_idea: "改革军队"
  CUB_youth_army: "青年劳工大军"
  CUB_avia_idea: "古巴空军"
  CUB_idea_migration_crisis: "非法移民"
  CUB_idea_migration_crisis_desc: "移民，已经成为我们国家的一个大问题。每天都有数百名专业人士非法离开我们的国家去寻找更好的生活。你可以通过“打击非法移民”国策来消除这个国家精神。"
  CUB_land_of_freedom_idea: "自由之岛"
  CUB_land_of_freedom_idea_desc: "古巴为自由而奋斗了几个世纪，现在我们是一个真正自由的国家，我们不会让任何人夺走我们的独立！"
- CUB_idea_blockade2: "对古巴的封锁"
- CUB_idea_blockade2_desc: "1962年，美国对古巴实施禁运，并且从未解除。九十年代初苏联解体后，古巴几乎没有贸易伙伴，其影响尤其严重。"
+ : "对古巴的封锁"
+ _desc: "1962年，美国对古巴实施禁运，并且从未解除。九十年代初苏联解体后，古巴几乎没有贸易伙伴，其影响尤其严重。"
  CUB_idea_blockade1: "对古巴的封锁"
  CUB_idea_blockade1_desc: "1962年，美国对古巴实施禁运，并且从未解除。九十年代初苏联解体后，古巴几乎没有贸易伙伴，其影响尤其严重。"
- CUB_idea_blockade4: "对古巴的封锁"
- CUB_idea_blockade4_desc: "1962年，美国对古巴实施禁运，并且从未解除。九十年代初苏联解体后，古巴几乎没有贸易伙伴，其影响尤其严重。"
+ : "对古巴的封锁"
+ _desc: "1962年，美国对古巴实施禁运，并且从未解除。九十年代初苏联解体后，古巴几乎没有贸易伙伴，其影响尤其严重。"
  CUB_cpc_idea1: "对共产党的强烈不信任"
  CUB_cpc_idea1_desc: "我们的共产主义意识形态已经走进了死胡同。人们不信任我们，他们改变政治观点而支持反对者，反共口号在我们国家越来越多地听到。"
- CUB_cpc_idea2: "对共产党的不信任"
- CUB_cpc_idea2_desc: "通过一些改革，我们开始重新获得民众的支持，但仍不足以稳定国家局势。"
- CUB_cpc_idea3: "反对共产党"
+ CUB_cpc_bad: "对共产党的不信任"
+ CUB_cpc_bad_desc: "通过一些改革，我们开始重新获得民众的支持，但仍不足以稳定国家局势。"
+ CUB_cpc_good: "反对共产党"
  CUB_infrastructure_dev_idea: "积极发展基础设施"
  CUB_encouraged_foreign_investments_idea: "流入我国的投资流量"
  CUB_zedm_idea: "马列尔特别开发区"
  CUB_zedm_idea_desc: "马列尔特别开发区是古巴的主要经济项目，旨在吸引外国投资、创造新的就业机会并为全国市场提供优质产品，作为进口替代的一部分。"
  CUB_tourism_hub_idea: "旅游中心"
  CUB_miracle_operation_idea: "奇迹行动"
- CUB_idea_special_period2: "特殊时期"
- CUB_idea_special_period2_desc: "特殊时期是苏联解体后古巴经济停滞和危机的时期。"
- CUB_idea_special_period3: "特殊时期"
- CUB_idea_special_period3_desc: "特殊时期是苏联解体后古巴经济停滞和危机的时期。"
+ CUB_better_sp: "特殊时期"
+ CUB_better_sp_desc: "特殊时期是苏联解体后古巴经济停滞和危机的时期。"
+ CUB_better_special_period: "特殊时期"
+ CUB_better_special_period_desc: "特殊时期是苏联解体后古巴经济停滞和危机的时期。"
  CUB_dual_curency: "双货币"
  CUB_dual_curency_desc: "1993年，古巴政府使美元合法化。从那时起，古巴经济就有两种货币：比索和美元......"
  CUB_CUPET_idea: "古巴石油联盟"
  CUB_CUPET_idea_desc: "古巴石油联盟是古巴最大的石油公司。它由古巴国家政府拥有和经营。该公司从事石油矿床的开采以及石油产品的精炼和分销。它与CIMEX集团合作经营一系列加油站，以可兑换比索销售汽油。"
  CUB_destoryed_agroculture_idea: "被毁的农业"
  CUB_destoryed_agroculture_idea_desc: "在90年代的危机期间，由于缺乏资金，我们经济的关键部门遭受了很大的损失。其中之一是农业文化。我们需要重建它。"
- CUB_reformism_idea2: "民主改革新纲领"
+ CUB_new_dem_reforms: "民主改革新纲领"
  CUB_old_command_economy: "旧古巴指挥经济"
  CUB_old_command_economy_desc: "旧的计划经济体制只会让事情变得更糟。我们需要改变我们的经济体系。您可以通过经济改革移除这个国家精神。"
  CUB_agroculture: "复兴农业"
- CUB_agroculture2: "复兴农业"
+ CUB_revive_agro: "复兴农业"
  CUB_const_communist_idea: "古巴新宪法"
  CUB_anti_lgbtqa_idea: "反LGBT立场"
  CUB_anti_lgbtqa_idea_desc: "LGBT是一种世界性疾病。我们需要解决这个问题，并防止我们的公民生病。"
  CUB_communism_idea: "古巴共产主义"
  CUB_prepare_for_worst_idea: "做好最坏准备"
  CUB_idea_castroism: "卡斯特罗主义"
- CUB_idea_castroism2: "卡斯特罗政策的连续性"
+ CUB_dem_castroism: "卡斯特罗政策的连续性"
  CUB_idea_castroism_anti: "对卡斯特罗思想的谴责"
  CUB_reformism_idea1: "民主改革的开始"
  CUB_reformism_idea1_desc: "经过多年的共产主义压迫，我们的领导人认识到了自己的错误，并走上了真正的民主之路。然而，这条路并不容易，但我们已经迈出了第一步。"
  CUB_communist_opposition_idea: "共产主义反对派"
  CUB_communist_opposition_idea_desc: "一些思想领袖不同意我们的新制度，强烈反对我们的改革。不幸的是，他们在社会上得到了强有力的支持。"
  CUB_const_democratic_idea: "新民主宪法"
- CUB_const_democratic_idea3: "新古巴民主宪法"
- CUB_const_democratic_idea2: "古巴民主宪法"
+ CUB_new_dem_constitution: "新古巴民主宪法"
+ CUB_constitution_democracy: "古巴民主宪法"
  CUB_idea_new_cuba: "新民主古巴"
  CUB_idea_new_cuba_desc: "终于，这么多年过去了，古巴将成为一个自由、民主的国家。"
  CUB_idea_democratic_reforms: "民主改革"
- CUB_idea_democratic_reforms2: "延续成功的民主改革政策"
+ CUB_idea_democratic_reforms_continue: "延续成功的民主改革政策"
  CUB_new_center_of_caribean_desc: "最终，加勒比团结且强大！"
  CUB_pro_lgbtqa_idea: "亲LGBTQ立场"
- CUB_pro_lgbtqa_idea1: "亲LGBTQ立场"
+ CUB_pro_lgbt_idea_comu: "亲LGBTQ立场"
  CUB_new_cuba: "新自由主义古巴"
  CUB_idea_nato_standards: "军队采用北约标准"
  CUB_5_years_plans_idea: "五年计划"
  CUB_alba_idea: "美洲玻利瓦尔联盟成员国"
  CUB_communism_idea2: "古巴共产主义脸孔"
- CUB_castros_new_idea6: "经济实现计划"
+ CUB_rauls_actual_finishing: "经济实现计划"
  CUB_castros_new_idea: "劳尔的改革计划"
- CUB_castros_new_idea2: "劳尔的改革计划"
- CUB_castros_new_idea3: "劳尔的改革计划"
- CUB_castros_new_idea4: "经济实现计划"
- CUB_castros_new_idea5: "经济实现计划"
- CUB_castros_new_idea7: "青年共产主义组织"
+ CUB_rauls_second_stage: "劳尔的改革计划"
+ CUB_rauls_third_refs: "劳尔的改革计划"
+ CUB_rauls_four_reforms: "经济实现计划"
+ CUB_rauls_actualisation_begin: "经济实现计划"
+ CUB_youth_castro_organisation: "青年共产主义组织"
  CUB_cdr: "保卫革命委员会"
  CUB_nationalist_idea1: "古巴新民族主义政策"
- CUB_nationalist_idea2: "古巴新民族主义政策"
- CUB_nationalist_idea3: "古巴新民族主义政策"
- CUB_nationalist_idea4: "古巴新民族主义政策"
- CUB_nationalist_idea5: "古巴新民族主义政策"
+ CUB_nationalist_politics: "古巴新民族主义政策"
+ CUB_nationalist_politics_cont: "古巴新民族主义政策"
+ CUB_nationalist_politics_four: "古巴新民族主义政策"
+ CUB_nationalist_politics_finish: "古巴新民族主义政策"
  CUB_anti_lgbtqa_idea_nati: "反LGBT宣传"
  CUB_patrotism_idea: "古巴爱国主义的复兴"
  CUB_militarism_idea: "积极弘扬爱国主义和军国主义"
@@ -387,12 +387,12 @@
  CUB_old_system_protests: "对旧制度的抗议"
  CUB_old_system_protests_desc: "古巴的光明未来并不令所有人满意，包括前共产党员。由于国家的变化和他们的下台，他们正在抵制并试图破坏我们生活的变化。这个国家精神可以通过完成国策移除：§R改革宪法§!"
  CUB_idea_democrats_ref: "古巴民主政策"
- CUB_idea_democrats_ref2: "古巴民主政策"
- CUB_idea_democrats_ref3: "古巴民主政策"
+ CUB_idea_democrats_policiy: "古巴民主政策"
+ CUB_idea_democrats_policiy_finish: "古巴民主政策"
  CUB_idea_memory: "纪念共和国领导人"
  CUB_idea_memory_desc: "共产主义已经过去几十年了，对我们历史的亵渎和改写也已经过去了。然而，是时候说出那个时代领导人的全部真相了。我们必须记住他们并尊重他们的功绩。"
- CUB_idea_memory2: "纪念共和国领导人"
- CUB_idea_memory2_desc: "共产主义已经过去几十年了，对我们历史的亵渎和改写也已经过去了。然而，是时候说出那个时代领导人的全部真相了。我们必须记住他们并尊重他们的功绩。"
+ CUB_idea_republic_memory: "纪念共和国领导人"
+ CUB_idea_republic_memory_desc: "共产主义已经过去几十年了，对我们历史的亵渎和改写也已经过去了。然而，是时候说出那个时代领导人的全部真相了。我们必须记住他们并尊重他们的功绩。"
  CUB_idea_conf_one: "联盟计划的准备"
  CUB_caribean_nation: "加勒比国家"
  CUB_caribean_nation_desc: "现在，没有古巴，没有多米尼加共和国，没有海地。加勒比各国人民团结在共同屋檐下，共同发展！"
