--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -243,7 +243,7 @@
  cuba.55.d: "They rejected our offer and began pulling their troops to the site of potential hostilities"
  cuba.55.a: "Let's crush them"
  cuba.63.t: "Cuba is asking for our protection"
- cuba.63.d: "riends, decided that the strength of their one army was not enough to defend the entire territory of their country. Today, the Cuban government has made a request for our bases to be stationed on the territory of the island, what will we say to them?"
+ cuba.63.d: "Friends, decided that the strength of their one army was not enough to defend the entire territory of their country. Today, the Cuban government has made a request for our bases to be stationed on the territory of the island, what will we say to them?"
  cuba.63.a: "Let's protect our Friends"
  cuba.63.b: "American soldiers will not come to Cuba's aid"
  cuba.64.t: "America agreed to protect us"
