egypt fixes and stuff

--- a/localisation/english/MD_focus_EGY_l_english.yml
+++ b/localisation/english/MD_focus_EGY_l_english.yml
@@ -366,8 +366,8 @@
  EGY_imp_suppl_desc: "To better supply our troops, we need to improve communications centers and general military supply."
  EGY_shells: "New Artillery Shells"
  EGY_shells_desc: "For our army we need new artillery shells."
- EGY_new_army_eq: "Open Old Military Stashes"
- EGY_new_army_eq_desc: "We will open our old military warehouses to arm our army."
+ EGY_new_army_eq: "Increase Arms Supplies"
+ EGY_new_army_eq_desc: "Military exercises have shown that our army lacks equipment, for this we must open old storage facilities and expand our existing capacities."
  EGY_abu_zabal: "Abu Zaabal Specialty Chemicals"
  EGY_abu_zabal_desc: "Abu Zaabal Specialty Chemicals produces explosives and rocket fuel."
  EGY_aoi_electro: "AOI Electronics Factory"
@@ -1510,3 +1510,39 @@
  LoAS_member_upd_desc: "The Arab League, formally the League of Arab States, is a regional council of Arabic states. The purpose of the organization is to draw closer relations between member states and coordinate collaboration between them."
 
  copts_revolted: "Coptic people have revolted!"
+
+ egypt.154.t: "Egyptian Arms Deal"
+ egypt.154.d: "The Egyptian military wants to buy our F16, shall we sell it to them?"
+ egypt.154.a: "Give Them Weapons!"
+ egypt.154.b: "No"
+ egypt.155.t: "USA Accepts"
+ egypt.155.d: "They will sell us F16 Jets"
+ egypt.155.a: "Great!"
+ egypt.156.t: "USA denies"
+ egypt.156.d: "They will not sell us F16 Jets"
+ egypt.156.a: "Damn"
+ EGY_f16_TT: "We will send a request to §Y[USA.GetNamewithFlag]§! for the purchase of §Y27 units of F16§! for $12 Billion"
+ 
+ egypt.157.t: "Egyptian Arms Deal"
+ egypt.157.d: "The Egyptian military wants to buy our MIG29, shall we sell it to them?"
+ egypt.157.a: "Give Them Weapons!"
+ egypt.157.b: "No"
+ egypt.158.t: "Russia Accepts"
+ egypt.158.d: "They will sell us MIG29 Jets"
+ egypt.158.a: "Great!"
+ egypt.159.t: "Russia denies"
+ egypt.159.d: "They will not sell us MIG29 Jets"
+ egypt.159.a: "Damn"
+ EGY_mig29_TT: "We will send a request to §Y[SOV.GetNamewithFlag]§! for the purchase of §Y20 units of MIG29§! for $10 Billion"
+
+ egypt.160.t: "Egyptian Arms Deal"
+ egypt.160.d: "The Egyptian military wants to buy our Sa-11 BUK, shall we sell it to them?"
+ egypt.160.a: "Give Them Weapons!"
+ egypt.160.b: "No"
+ egypt.161.t: "Russia Accepts"
+ egypt.161.d: "They will sell us Sa-11 BUK"
+ egypt.161.a: "Great!"
+ egypt.162.t: "Russia denies"
+ egypt.162.d: "They will not sell us Sa-11 BUK"
+ egypt.162.a: "Damn"
+ EGY_buk_TT: "We will send a request to §Y[SOV.GetNamewithFlag]§! for the purchase of §Y30 units of Sa-11 BUK§! for $3 Billion"
