--- a/localisation/simp_chinese/MD_focus_DEN_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_DEN_l_simp_chinese.yml
@@ -395,7 +395,7 @@
  DEN_nordic_films_desc: "北欧电影公司于1906年11月6日在哥本哈根的瓦尔比地区成立。今天，他们不仅制作电影，而且还经营着丹麦的许多电影院。"
  DEN_restarting_Schultz_larsen: "舒尔茨 & 拉森"
  DEN_restarting_Schultz_larsen_desc: "舒尔茨 & 拉森是一家成立于1919年的丹麦武器制造商，但在第二次世界大战后，他们开始主要生产狩猎设备，现在是时候让他们回到原来的轨道上，让他们制造武器供丹麦军队使用。"
- DEN_DISA: "DISA"
+ DEN_DISA: "迪砂"
  DEN_DISA_desc: "创立时名为丹麦雷克尔步枪联合体 A/S，后来改名为丹麦工业综合体 A/S（DISA），自二战以来一直在生产世界各地使用的武器，但与舒尔茨 & 拉森一样，二战后出现了衰退，现在是我们激励这些公司扩大和启动武器生产的时候了，这样丹麦军队才能得到丹麦武器的供应。"
  DEN_novo_nordisk: "诺沃-诺德公司"
  DEN_novo_nordisk_desc: "诺沃-诺德公司是一家丹麦制药公司，生产胰岛素、血友病药物、生长激素和性激素，除此之外，它还是丹麦最大的公司，几乎比麦斯克大一倍。"
@@ -606,7 +606,7 @@
  DEN_idea_equality_desc: "丹麦致力于实现真正的平等，实施政策和举措，促进所有公民的平等机会和权利，无论性别、种族或背景。"
  DEN_idea_schultz_larsen: "舒尔茨 & 拉森"
  DEN_idea_schultz_larsen_desc: "舒尔茨·拉森公司以其枪械和步枪而闻名，仍然是丹麦制造业的基石，在国内和国际上提供优质产品。"
- DEN_idea_DISA: "DISA"
+ DEN_idea_DISA: "迪砂"
  DEN_idea_DISA_desc: "迪砂是丹麦领先的IT服务提供商，在实现国家数字基础设施现代化和确保网络安全措施稳健有效方面发挥着至关重要的作用。"
  DEN_idea_conservative: "保守社会"
  DEN_idea_conservative_desc: "丹麦保持其保守社会的地位，重视传统、家庭和稳定，同时谨慎地应对社会和文化变革。"
@@ -1557,3 +1557,8 @@
  DEN_office_workforce: "办公园区所需的工人"
  DEN_stability_factor: "稳定度"
  DEN_monthly_population: "月度人力"
+ DEN_DISA_materiel_manufacturer: "迪砂"
+ DEN_Composhield_utility_vehicle_manufacturer: "复合屏蔽"
+ DEN_Odense_Staalskibsvaerft: "欧登塞钢铁公司"
+ DEN_Svendborg_skibsvaerft: "斯文堡造船厂"
+ DEN_Terma_AS_aircraft_manufacturer: "特玛公司"
