--- a/localisation/simp_chinese/MD_focus_IND_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_IND_l_simp_chinese.yml
@@ -225,8 +225,6 @@
  IND_air_drills_desc: "为了磨练我们的飞行员技能，我们必须首先确保他们做好战斗准备。 我们将指派官员确保我们的飞行员做好准备。"
  IND_expand_air_craft_designs: "更好的飞机设计"
  IND_expand_air_craft_designs_desc: "为了在航空领域不落后于世界其他国家，我们最好开始资助新飞机设计的研究人员。"
- IND_purchase_rafele_jets: "阵风战斗机"
- IND_purchase_rafele_jets_desc: "我们的西方朋友向我们提供了他们最新、最好的多用途喷气式战斗机，但这是有代价的。我们应该考虑这一点，因为我们可以与他们拉近关系并获得西方飞机。"
  IND_nato_drilling: "北约空中训练"
  IND_nato_drilling_desc: "为了巩固我们与西方的友谊，我们最好与他们进行空中演习。这将使我们能够在发生协同攻击时做好准备。"
  IND_funds_for_iae: "为印度尼西亚航空航天公司注资"
@@ -450,10 +448,8 @@
  IND_demand_reperations_desc: "我们的男女家庭需要立即经济补偿。如果我们得不到这个补偿，我们就会自己来拿走……"
  IND_malaysia: "与马来西亚对话"
  IND_malaysia_desc: "马来西亚和印度尼西亚是两个近邻，但最近的问题使我们分离。"
- IND_demand_riau: "要求他们割让廖内群岛"
+ IND_demand_riau: "要求他们退出廖内群岛"
  IND_demand_riau_desc: "廖内群岛是印度尼西亚的合法领土，我们对声称拥有该领土主权的马来西亚人并不友善。我们需要立即要求他们退后！"
- IND_scede_riau: "割让廖内群岛"
- IND_scede_riau_desc: "退出廖内群岛将解决我们的很多问题。为了一个小岛而战不值得。"
  IND_strategic_partnership: "战略伙伴"
  IND_strategic_partnership_desc: "我们现在能够与马来西亚人成为战略合作伙伴。离开廖内后，他们真的很喜欢我们。"
  IND_papua_new: "巴布亚新几内亚"
@@ -950,3 +946,7 @@
  IND_Aceh_insurgency4_desc: "自1976年以来，亚齐一直处于混乱和叛乱状态，导致我们国家不稳定和不必要的流血事件。我们的军队过于专注于对付这些叛乱分子，这导致我们在军事上落后"
  IND_finished_disaster: "灾难早期预防"
  IND_finished_disaster_desc: "哇，你上次及早阻止了灾难！干得好。"
+ IND_purchase_rafale_jets: "阵风战机"
+ IND_purchase_rafale_jets_desc: "我们的西方朋友向我们提供了他们最新、最好的多用途喷气机，但这是有代价的。我们应该考虑这一点，因为我们可以与他们拉近关系并获得西方飞机。"
+ IND_cede_riau: "割让廖内群岛"
+ IND_cede_riau_desc: "割让廖内群岛将解决我们的很多问题。为了一个小岛而战不值得。"
