--- a/localisation/simp_chinese/MD_focus_SER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SER_l_simp_chinese.yml
@@ -144,7 +144,7 @@
  SER_ter_oborona_desc: "南斯拉夫领土防御早在六十年代就已创建，我们将再次复兴它。毕竟，每个公民都应该准备好保卫自己的国家，无论他是否是军人。"
  SER_renewed_milosevic_serbia: "塞尔维亚重生"
  SER_renewed_milosevic_serbia_desc: "我们的人民在经历了多年的战争、屈辱和对其伟大性的否认之后，已经走上了重生和恢复的道路。"
- SER_ratify_greater_serbia: "批准大塞尔维亚"
+ SER_ratify_greater_serbia: "宣称大塞尔维亚"
  SER_ratify_greater_serbia_desc: "我们将宣布大塞尔维亚，首先宣称所有必要的土地，然后再实际获取。"
  SER_full_milosevic_dictatorship: "米洛舍维奇的独裁统治"
  SER_full_milosevic_dictatorship_desc: "米洛舍维奇最终承认他创建的政权是独裁政权。但独裁统治就不好了吗？"
@@ -276,7 +276,7 @@
  SER_pvo: "PPT 纳门斯卡"
  SER_pvo_desc: "PPT 纳门斯卡是一家塞尔维亚制造商，生产武器、迫击炮、榴弹发射器、无人地面车辆、液压和气动装置、飞机零部件和一些复杂的武器系统，包括处于不同生产阶段的现代化M-77橘子、PASARS-16和多管火箭炮莫拉瓦。同时也有面向民用和工业用户的产品。"
  SER_droni: "PR-DC"
- SER_droni_desc: "PR-DC是一家专门生产无人机的塞尔维亚私营公司，展出了包括巡飞弹药在内的全系列产品，其中一款产品已接近上市，而其他许多产品仍处于开发阶段。"
+ SER_droni_desc: "PR-DC是一家专门生产无人机的塞尔维亚私营公司，展出了包括游荡弹药在内的全系列产品，其中一款产品已接近上市，而其他许多产品仍处于开发阶段。"
  SER_export: "南斯拉夫进口SDPR"
  SER_export_desc: "南斯拉夫进口SDPR是一家塞尔维亚国有武器制造商以及国防相关设备进出口中介公司。"
  SER_genshtab: "塞尔维亚总参谋部"
