--- a/localisation/simp_chinese/MD_money_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_money_l_simp_chinese.yml
@@ -119,20 +119,20 @@
  NET_RATE: "净收入/亏损："
  NET_RATE_NUM: "$$[?treasury_rate|+3]"
  gdp_per_capita_country_modifiers: "人均GDP"
- 2_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y2000§!K（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
- 3_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y3000§!K（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
- 4_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y4000§!K（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
- 5_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y5000§!K（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
- 6_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y6000§!K（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
- 7_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y7000§!K（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
- 8_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y8000§!K（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
- 9_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y9000§!K（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
- 10_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y10000§!K（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
- 15_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y15000§!K（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
- 20_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y20000§!K（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
- 25_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y25000§!K（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
- 30_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y30000§!K（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
- 40_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y40000§!K（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
+ 2_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y2000§!（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
+ 3_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y3000§!（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
+ 4_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y4000§!（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
+ 5_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y5000§!（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
+ 6_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y6000§!（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
+ 7_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y7000§!（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
+ 8_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y8000§!（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
+ 9_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y9000§!（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
+ 10_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y10000§!（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
+ 15_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y15000§!（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
+ 20_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y20000§!（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
+ 25_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y25000§!（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
+ 30_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y30000§!（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
+ 40_per_capita_or_more_tt: "人均GDP水平大于等于$$§Y40000§!（当前：$$§Y[?ROOT.gdp_per_capita]§!K）"
  7_total_gdp_tt: "总GDP大于等于$$§Y7000§!B（当前：$$§Y[?ROOT.gdp_total]§!B）"
  full_control_of_suez_TT: "$$[?additional_income_suez|+3]来自§Y$full_control_of_suez$§!\n"
  BOS_united_nations_aid_TT: "$$[?Bosnia_united_nations_aid|+3]来自于§Y世界银行、美国国际开发署、联合国开发计划署和CARDS§!\n如果国际支持离开，这项收入将§R取消§!"
