--- a/Changelog.txt
+++ b/Changelog.txt
@@ -51,6 +51,7 @@ v1.10.0
   - Fixed Polish AI leaving CSTO in Korwin path
   - Fixed employment modifiers not working correctly for offices
   - Fixed Quebec completely erasing CAN cores on rebelling
+  - Fixed display error in GDP/C tooltip
 
  Content:
   - NEW TREE: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
