--- a/localisation/simp_chinese/MD_focus_DEN_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_DEN_l_simp_chinese.yml
@@ -514,7 +514,7 @@
  denmark.4.o2: "请求俄罗斯战斗机"
  denmark.4.o3: "其实我们现在买不起"
  denmark.5.t: "[DEN.GetAdjective]自由主义者批评福利国家"
- denmark.5.d: "本周早些时候，[DEN.GetAdjective]社会震惊地听到自由党公开呼吁废除[DEN.GetAdjective]福利国家，支持“最小国家”。自由党似乎准备带头成为最大的右翼政党，如果不是整体的话，虽然在现实中这很可能只是意味着削减福利国家的资金，而不是彻底的解体，但它被看作是一个无政府主义者对北欧模式的宣战。"
+ denmark.5.d: "本周早些时候，[DEN.GetAdjective]社会震惊地听到自由党公开呼吁废除[DEN.GetAdjective]福利国家，支持“极简国家”。自由党似乎准备带头成为最大的右翼政党，如果不是整体的话，虽然在现实中这很可能只是意味着削减福利国家的资金，而不是彻底的解体，但它被看作是一个无政府主义者对北欧模式的宣战。"
  denmark.5.o1: "让不能站立的东西倒下"
  denmark.6.t: "[DEN.GetAdjective]人民党在民意调查中取得进展"
  denmark.6.d: "最近的政治发展看到人们更加关注保护[DEN.GetAdjective]文化不受外来影响。至于这构成了什么，许多丹麦人似乎认为，[DEN.GetAdjective]文化首先涉及对[DEN.GetName]历史的自豪感，并呼吁停止无情的进步主义、文化相对主义和全球主义，以支持更反动的回归“丹麦第一”。这一发展对[DEN.GetAdjective]人民党来说是个好消息，许多人认为他们是[DEN.GetName]传统主义和民族自豪感的保护者。"
@@ -899,7 +899,7 @@
  DEN_normalise_the_strike_desc: "丹麦将寻求罢工正常化，使其成为工人维护自身权利和谈判公平劳动条件的合法有效工具。"
  DEN_structurised_support: "结构化支持"
  DEN_structurised_support_desc: "丹麦实施结构化支持计划，为包括低收入家庭、残疾人和边缘化社区的弱势群体提供全面的资源和帮助。"
- DEN_the_true_wellfare_state: "真正的福利之邦"
+ DEN_the_true_wellfare_state: "真正的福利国家"
  DEN_the_true_wellfare_state_desc: "通过投资于教育、医疗保健、住房和社会服务，政府旨在创造一个人人都有机会过上充实而有尊严的生活的社会。"
  DEN_export_the_protest: "输出抗议之声"
  DEN_export_the_protest_desc: "通过知识分享、声援和资源馈赠，丹麦旨在扩大边缘化社区的声音，在国际范围内推动进步事业。"
@@ -936,9 +936,9 @@
  DEN_conventional_Industry: "传统工业"
  DEN_conventional_Industry_desc: "丹麦聚焦到传统工业部门在提供基本商品和服务方面的重要性，继续支持这些部门。"
  DEN_found_Alternatived: "找到替代方案"
- DEN_found_Alternatived_desc: ""
+ DEN_found_Alternatived_desc: "丹麦受到“另类选择”政党精神的启发，探索创新的解决方案和政策，以应对紧迫的社会和环境挑战。丹麦秉承可持续发展、社会正义和参与性民主的原则，力求开创优先考虑人类和地球福祉的替代方法。"
  DEN_new_political_culture: "新政治文化"
- DEN_new_political_culture_desc: ""
+ DEN_new_political_culture_desc: "基于“另类选择”的价值观和愿景，丹麦致力于培育一种以透明度、基层参与和整体决策为特征的新政治文化。通过挑战传统权力结构和促进自下而上的举措，丹麦旨在培育一个更具包容性、协作性和前瞻性的政治格局，赋予公民权力并促进集体行动以实现积极变革。"
  DEN_serious_fight_climate_change: "严肃应对气候变化"
  DEN_serious_fight_climate_change_desc: "通过实施大胆的政策、投资可再生能源和推广碳中和做法，政府可以以身作则，减少温室气体排放，减轻全球变暖的影响。"
  DEN_entrepreneurship: "创业"
@@ -997,8 +997,8 @@
  DEN_Economic_first_desc: "丹麦将经济优先政策放在首位，认识到促进强大和充满活力的经济作为健全的福利国家基础的重要性。"
  DEN_reduce_taxation: "减税"
  DEN_reduce_taxation_desc: "保证减税，将其作为刺激经济增长、鼓励投资和提高生产力的一种手段。"
- DEN_Form_minimal_state: "建立最小国家"
- DEN_Form_minimal_state_desc: "丹麦寻求建立一个最小国家，重新定义政府在提供福利服务和社会支持方面的作用。通过精简官僚机构、将责任下放给地方当局以及赋予社区解决自身需求的能力，政府旨在打造一个更精简、更高效的国家机构。"
+ DEN_Form_minimal_state: "建立极简国家"
+ DEN_Form_minimal_state_desc: "丹麦寻求建立一个极简国家，重新定义政府在提供福利服务和社会支持方面的作用。通过精简官僚机构、将责任下放给地方当局以及赋予社区解决自身需求的能力，政府旨在打造一个更精简、更高效的国家机构。"
  DEN_basic_welfare: "基础福利"
  DEN_basic_welfare_desc: "确保所有公民都能享受基本福利，保证医疗、教育和住房等基本服务等公民基本权利。"
  DEN_reform_taxation: "改革税制"
@@ -1305,7 +1305,7 @@
  denmark.300.a: "生姜头也能当地主？这个国家算是完球了。"
  denmark.300.b: "他在onlyFans上有账号吗？"
  denmark.300.c: "整个丹麦实际上都是内陆地区"
- DEN_idea_feal_well: "真正的福利之邦"
+ DEN_idea_feal_well: "真正的福利国家"
  DEN_idea_feal_well_desc: "丹麦重申致力于成为一个真正的福利国家，优先考虑社会福利计划、医疗保健可及性和教育，以确保所有公民的福祉。"
  DEN_idea_Unconditional_basic_income: "无条件基本收入"
  DEN_idea_Unconditional_basic_income_des: "丹麦为每个公民提供无条件基本收入，改善他们的寿命和福利。"
@@ -1344,31 +1344,31 @@
  DEN_idea_World_forum: "世界论坛"
  DEN_idea_World_forum_desc: "丹麦主张建立世界劳工论坛，全球各地工会和工人组织的代表可以齐聚一堂，应对共同挑战、分享最佳实践并协调国际团结努力。"
  DEN_idea_ITUC: "国际工会联合会"
- DEN_idea_ITUC_desc: ""
+ DEN_idea_ITUC_desc: "#todo"
  DEN_Labour_Union1: "保障工人权利"
- DEN_Labour_Union1_desc: ""
+ DEN_Labour_Union1_desc: "#todo"
  DEN_Labour_Union2: "强制性工人委员会"
- DEN_Labour_Union2_desc: ""
+ DEN_Labour_Union2_desc: "#todo"
  DEN_Labour_Union3a: "党工委员会"
- DEN_Labour_Union3a_desc: ""
+ DEN_Labour_Union3a_desc: "#todo"
  DEN_Labour_Union3b: "工会工人委员会"
- DEN_Labour_Union3b_desc: ""
+ DEN_Labour_Union3b_desc: "#todo"
  DEN_marxist_reeducation_idea: "马克思主义改造"
- DEN_marxist_reeducation_idea_desc: ""
+ DEN_marxist_reeducation_idea_desc: "#todo"
  DEN_inspire_revolutions: "抗议出口"
- DEN_inspire_revolutions_desc: ""
+ DEN_inspire_revolutions_desc: "#todo"
  DEN_World_Workers_Paradise: "世界工人天堂"
- DEN_World_Workers_Paradise_desc: ""
+ DEN_World_Workers_Paradise_desc: "#todo"
  DEN_council_run_corporations_idea: "理事会运行的公司"
- DEN_council_run_corporations_idea_desc: ""
+ DEN_council_run_corporations_idea_desc: "#todo"
  DEN_Political_Capital_Injection: "政治资本注入"
- DEN_Political_Capital_Injection_desc: ""
+ DEN_Political_Capital_Injection_desc: "#todo"
  DEN_Anarchism1: "丹麦无政府主义"
- DEN_Anarchism1_desc: ""
+ DEN_Anarchism1_desc: "#todo"
  DEN_Anarchism2: "丹麦无政府主义"
- DEN_Anarchism2_desc: ""
+ DEN_Anarchism2_desc: "#todo"
  DEN_Anarchism3: "丹麦无政府主义"
- DEN_Anarchism3_desc: ""
+ DEN_Anarchism3_desc: "#todo"
  DEN_increased_tourism_gain_tt: "旅游业"
  DEN_euro_question_decisions_category: "欧元问题"
  DEN_euro_referendum_decision: "欧元公投"
@@ -1442,81 +1442,81 @@
  DEN_stability_factor_tt: "将[?DEN_stability_factor_change|+%]§Y稳定度§!用于§H丹麦王国§!(现有稳定度：[?DEN_stability_factor|Y%])"
  DEN_Danish_Communist_Friends: "丹麦的共产主义盟友"
  DEN_the_politics_of_denmark: "丹麦的政策"
- DEN_the_politics_of_denmark.desc: "TODO"
+ DEN_the_politics_of_denmark.desc: "丹麦政治概括了国家的民主原则，促进公开对话、政治多元化和公民参与。丹麦政治植根于建立共识和社会责任的传统，体现了对代议制治理和维护个人自由和权利的承诺。"
  DEN_reinforce_western_values: "强化西方价值观"
- DEN_reinforce_western_values.desc: "TODO"
+ DEN_reinforce_western_values.desc: "作为西方社会的坚定成员，丹麦致力于加强民主、人权和法治的共同价值观。通过积极参与国际论坛和联盟，丹麦在全球舞台上倡导自由、平等和正义的原则。"
  DEN_modern_democracy: "现代民主"
- DEN_modern_democracy.desc: "TODO"
+ DEN_modern_democracy.desc: "丹麦奉行现代民主的原则，其特点是透明、问责和包容。凭借健全的选举制度、强大的机构和充满活力的公民社会，丹麦不断发展成为民主治理和政治多元化的灯塔。"
  DEN_the_socialist_agenda: "社会主义议程"
- DEN_the_socialist_agenda.desc: "TODO"
+ DEN_the_socialist_agenda.desc: "社会主义议程强调了丹麦对社会福利、平等和团结的承诺。该议程以社会民主原则为基础，优先考虑旨在减少不平等、确保普遍获得医疗保健和教育以及为所有公民建立一个公平和包容的社会的政策。"
  DEN_connect_with_the_voters: "与选民联系"
- DEN_connect_with_the_voters.desc: "TODO"
+ DEN_connect_with_the_voters.desc: "丹麦政治领导人认识到公民参与的重要性，努力就对他们最重要的问题与选民建立联系。通过外展工作、公共论坛和社区倡议，政客们寻求弥合政府和选民之间的差距，促进民主进程中的信任和问责。"
  DEN_the_welfare_state: "福利国家"
- DEN_the_welfare_state.desc: "TODO"
+ DEN_the_welfare_state.desc: "TODO福利国家是丹麦社会的基石，体现了国家对所有公民的社会正义和经济安全的承诺。凭借全面的社会计划、全民医疗保健和健全的社会安全网，丹麦保持着照顾最弱势成员和促进社会凝聚力的悠久传统。"
  DEN_prepare_for_the_future: "未雨绸缪"
- DEN_prepare_for_the_future.desc: "我们必须让我们的国家为即将到来的世纪做好准备。随着紧张局势的加剧和可能即将到来的金融危机，可能需要采取一些严厉措施。"
+ DEN_prepare_for_the_future.desc: "丹麦采取积极措施，投资于教育、创新和可持续发展，为未来的挑战和机遇做好准备。通过采用前瞻性的政策和战略规划，丹麦力求在快速变化的世界中确保长期繁荣和恢复力。"
  DEN_the_euro_question: "欧元问题"
- DEN_the_euro_question.desc: "TODO"
+ DEN_the_euro_question.desc: "欧元问题引发了关于欧元货币潜在采用的全国性辩论和审议。当丹麦权衡加入欧元区的经济和政治影响时，公民参与有关货币政策、主权和欧洲一体化的讨论，从而塑造丹麦经济政策的未来方向。"
  DEN_reinforce_the_currency: "强化货币"
- DEN_reinforce_the_currency.desc: "TODO"
+ DEN_reinforce_the_currency.desc: "丹麦仍然致力于强化其本国货币丹麦克朗，将其作为经济稳定和独立的象征。丹麦通过审慎的货币政策和财政措施，在应对全球经济挑战和不确定性的同时，维护了货币的完整性。"
  DEN_question_nato: "质疑北约"
- DEN_question_nato.desc: "TODO"
+ DEN_question_nato.desc: "丹麦严格评估其在北约联盟中的作用，考虑该组织的战略目标、原则和伙伴关系。通过建设性对话和外交接触，丹麦寻求确保北约在应对当代安全威胁和挑战方面的有效性和相关性。"
  DEN_reduce_commitment: "减少我们的承诺"
- DEN_reduce_commitment.desc: "TODO"
+ DEN_reduce_commitment.desc: "在不断变化的安全动态中，丹麦评估其军事承诺的范围和规模，平衡国家利益与国际义务。通过重新调整其国防态势和参与军事行动，丹麦旨在优化其对集体安全努力的贡献，同时优先考虑国防需求。"
  DEN_inform_partners: "通知合作伙伴"
- DEN_inform_partners.desc: "TODO"
+ DEN_inform_partners.desc: "丹麦与其国际合作伙伴保持开放和透明的沟通，让他们了解其政策、优先事项和战略目标。通过外交渠道和多边论坛，丹麦与志同道合的国家就共同的挑战和机遇加强协作与合作。"
  DEN_formalize_nordefco: "建立北欧防务合作组织"
- DEN_formalize_nordefco.desc: "TODO"
+ DEN_formalize_nordefco.desc: "丹麦主张北欧国家间的区域防务合作框架北欧防务合作组织的正规化和加强。通过加强军事互操作性、联合演习和能力发展，北欧防务合作组织为北欧-波罗的海地区的地区稳定和安全做出了贡献。"
  DEN_defense_treatys: "防御条约"
- DEN_defense_treatys.desc: "TODO"
+ DEN_defense_treatys.desc: "丹麦与战略伙伴签订防务条约和协议，申明其对集体安全和共同防御义务的承诺。通过双边和多边安排，丹麦加强了防务能力和合作，为地区和全球稳定做出了贡献。"
  DEN_strengthen_nordefco: "增强北欧防务合作组织"
- DEN_strengthen_nordefco.desc: "TODO"
+ DEN_strengthen_nordefco.desc: "丹麦致力于加强北欧防务合作组织作为北欧国家之间防务合作与协调的重要平台。通过深化军事一体化和联合能力，北欧防务合作组织增强了面对不断变化的安全威胁的威慑力、危机响应能力和复原力。"
  DEN_expand_nordefco: "扩张北欧防务合作组织"
- DEN_expand_nordefco.desc: "TODO"
+ DEN_expand_nordefco.desc: "TODO丹麦主张扩大北欧防务合作组织的成员范围，将更多的北欧和波罗的海国家纳入其中，从而扩大该框架在应对共同安全挑战方面的覆盖范围和影响力。通过包容性和协作性的防务合作，北欧防务合作组织加强了地区防务能力和团结。"
  DEN_intensify_baltops_commitment: "加强在波罗的海演习的承诺"
- DEN_intensify_baltops_commitment.desc: "TODO"
+ DEN_intensify_baltops_commitment.desc: "丹麦通过加强对多国波罗的海行动的参与来加强对波罗的海安全的承诺。通过加强海上安全、互操作性和威慑措施，丹麦重申与波罗的海盟国的团结，并为波罗的海地区的稳定做出贡献。"
  DEN_adopt_the_nato_doctrine: "采用北约军事学说"
- DEN_adopt_the_nato_doctrine.dessc: "TODO"
+ DEN_adopt_the_nato_doctrine.dessc: "丹麦将其国防政策和战略与北约学说保持一致，强调集体防御、威慑和危机管理。通过遵守北约的原则和指导方针，丹麦加强了联盟内的互操作性和合作，确保有效应对共同的安全挑战。"
  DEN_distance_from_the_eu: "疏远欧盟"
- DEN_distance_from_the_eu.desc: "TODO"
+ DEN_distance_from_the_eu.desc: "丹麦考虑其与欧盟的关系，评估更紧密一体化与保持一定距离的利弊。通过民主辩论和公共对话，丹麦明确其在欧盟内的立场，维护国家主权和利益，同时促进合作应对共同挑战。"
  DEN_leave_the_eu: "传达脱欧意图"
- DEN_leave_the_eu.desc: "TODO"
+ DEN_leave_the_eu.desc: "丹麦通过透明和民主的渠道传达其关于加入欧盟的意图，确保公民了解情况并参与决策过程。无论是讨论潜在的退出方案还是重新谈判成员资格条款，丹麦在塑造与欧盟的关系时都坚持民主价值观和原则。"
  DEN_tollerate_the_eu: "容忍欧盟"
- DEN_tollerate_the_eu.desc: "TODO"
+ DEN_tollerate_the_eu.desc: "丹麦对加入欧盟采取务实态度，平衡欧洲一体化的优势与国家利益和主权关切。通过建设性地参与欧盟机构和政策，丹麦寻求为其公民带来最大利益，同时在欧洲背景下维护其独特的身份和价值观。"
  DEN_create_task_force_north: "创建北方特遣部队"
- DEN_create_task_force_north.desc: "TODO"
+ DEN_create_task_force_north.desc: "丹麦成立北方特遣部队，以应对北极地区的安全挑战和机遇。通过协调军事、外交和科学努力，北方特遣部队加强了北极地区的态势感知、合作和准备，维护丹麦利益并促进地区稳定。"
  DEN_commit_to_the_eu: "承认欧盟"
  DEN_commit_to_the_eu.desc: "只要团结起来，我们就能在欧洲对抗其他超级大国。"
  DEN_spreading_democracy: "传播民主"
- DEN_spreading_democracy.desc: ""
+ DEN_spreading_democracy.desc: "丹麦通过外交接触、对外援助和支持民间社会倡议积极促进民主价值观和民主制度。通过在全球范围内倡导人权、善政和民主改革，丹麦促进了渴望民主治理的地区的和平、稳定和繁荣。"
  DEN_reform_the_public_sector: "改革公共部门"
  DEN_reform_the_public_sector.desc: "我们的公共部门已经变得效率低下，现在是我们调整资金并看看是否可以提高其效率的时候了。"
  DEN_education_sector: "教育部门"
- DEN_education_sector.desc: "TODO"
+ DEN_education_sector.desc: "丹麦将教育部门视为国家发展的基石，投资于所有公民的优质教育。丹麦的教育体系注重创新、包容性和终身学习，培养在全球化世界中取得成功所需的批判性思维、创造力和技能。"
  DEN_atheistic_schools: "无神论学校"
- DEN_atheistic_schools.desc: "TODO"
+ DEN_atheistic_schools.desc: "丹麦的无神论学校提供尊重不同信仰和价值观的世俗教育，提供不受宗教影响的中立学习环境。这些学校强调科学、理性和人文价值观，促进学生开放思想、宽容和智力探究。"
  DEN_finding_a_compromise: "多元学校制度"
- DEN_finding_a_compromise.desc: "TODO"
+ DEN_finding_a_compromise.desc: "丹麦的多元学校体系容纳了多种教育理念，包括采用各种教学方法的公立和私立学校。该系统反映了丹麦对教育选择、家长自主和学术自由的承诺，允许家庭选择符合其价值观和偏好的学校。"
  DEN_religious_schools: "宗教学校"
- DEN_religious_schools.desc: "TODO"
+ DEN_religious_schools.desc: "丹麦的宗教学校提供基于特定信仰传统的教育，在学术指导的同时提供精神和道德指导。在尊重宗教多样性和良心自由的同时，这些学校在向子孙后代传递文化遗产、价值观和传统方面发挥着作用。"
  DEN_health_sector: "健保部门"
- DEN_health_sector.desc: "TODO"
+ DEN_health_sector.desc: "丹麦卫生部门优先考虑公民的福祉，为所有人提供全面的医疗保健服务。丹麦的卫生系统注重预防性护理、以患者为中心的服务和循证医学，为个人和社区促进公平、效率和高质量的医疗保健成果。"
  DEN_electronic_health_records: "健康卡"
- DEN_electronic_health_records.desc: "TODO"
+ DEN_electronic_health_records.desc: "丹麦的健康卡系统确保通过国民健康保险卡普遍获得医疗保健服务。该电子卡使公民能够无缝获得医疗保健、处方和治疗，从而促进全国范围内高效、公平的医疗保健服务。"
  DEN_privatize_healthcare: "医疗保健私有化"
- DEN_privatize_healthcare.desc: "TODO"
+ DEN_privatize_healthcare.desc: "丹麦考虑将其医疗保健系统的某些方面私有化，引入基于市场的机制和竞争以提高效率和创新。通过利用私营部门的专业知识和资源，丹麦旨在加强医疗保健服务，同时保持普遍服务和质量标准。"
  DEN_american_style_healthcare: "美式健保"
- DEN_american_style_healthcare.desc: "TODO"
+ DEN_american_style_healthcare.desc: "丹麦探索了美式医疗保健模式的元素，将私人保险选择、消费者选择和市场动态纳入其医疗保健系统。在保留全民覆盖和公共融资的核心原则的同时，丹麦寻求推行优化医疗保健获取、负担能力和结果的改革。"
  DEN_public_healthcare_funding: "公共医疗保健资金"
- DEN_public_healthcare_funding.desc: "TODO"
+ DEN_public_healthcare_funding.desc: "丹麦重申其对医疗保健公共融资的承诺，确保通过税收和政府补贴为基本医疗服务提供资金。通过集中资源并分散民众的金融风险，丹麦的公共资助模式促进了医疗保健服务的团结、公平和可持续性。"
  DEN_healthcare_for_all: "全民医保"
- DEN_healthcare_for_all.desc: "TODO"
+ DEN_healthcare_for_all.desc: "丹麦秉持全民医疗保健的原则，保证无论社会经济地位或健康状况如何，人人都能获得基本医疗服务。通过全面的覆盖、预防计划和基于社区的护理，丹麦努力促进所有公民的健康公平和社会正义。"
  DEN_goverment_projekts: "政府项目"
- DEN_goverment_projekts.desc: "TODO"
+ DEN_goverment_projekts.desc: "丹麦启动了旨在改善医疗基础设施、服务提供和公共卫生成果的政府项目。通过投资研究、技术和创新，丹麦寻求应对新出现的健康挑战，提高医疗质量，并增强其医疗保健系统的弹性。"
  DEN_state_only_investments: "仅限国家投资"
- DEN_state_only_investments.desc: "TODO"
+ DEN_state_only_investments.desc: "丹麦考虑仅对关键医疗基础设施和服务进行国家投资，以确保基本医疗资产仍处于公共所有权和控制之下。通过优先考虑公共投资和监督，丹麦保障其公民基本医疗服务的完整性、可及性和可负担性。"
  DEN_allow_private_influence: "允许私人影响"
- DEN_allow_private_influence.desc: "TODO"
+ DEN_allow_private_influence.desc: "丹麦采取务实的方式允许私人影响其医疗保健系统，认识到私营部门参与提高效率、创新和服务提供的潜在好处。在保持强有力的监管和公共问责的同时，丹麦寻求利用公共和私营部门的优势来改善其人口的医疗保健成果。"
  DEN_Culture_modifier: "丹麦文化"
  DEN_Culture_drift_defence_factor: "展望变化抵制"
  DEN_Culture_conscription_factor: "适役人口"
@@ -1562,3 +1562,36 @@
  DEN_Odense_Staalskibsvaerft: "欧登塞钢铁公司"
  DEN_Svendborg_skibsvaerft: "斯文堡造船厂"
  DEN_Terma_AS_aircraft_manufacturer: "特玛公司"
+ DEN_Freetown_Christiana: "克里斯蒂安尼亚自由镇"
+ DEN_Freetown_Christiana_desc: "克里斯蒂安尼亚自由镇是哥本哈根另类生活和社区理想的象征。克里斯蒂安尼亚由一群擅自占地者于20世纪70年代创立，是一个自治社区，体现了集体所有权、艺术表达和不墨守成规的原则。尽管其非传统地位，克里斯蒂安尼亚仍然是一个充满活力的文化中心，吸引着来自世界各地的游客，因其独特的行动主义、创造力和反文化精神的融合而着迷。"
+ DEN_found_Visitdenmark: "成立丹麦旅游局"
+ DEN_found_Visitdenmark_desc: "丹麦旅游局的成立代表了丹麦政府为促进旅游业并向世界展示该国丰富的文化遗产、自然美景和充满活力的城市生活而做出的共同努力。"
+ DEN_idea_Visitdenmark: "丹麦旅游局"
+ DEN_idea_Visitdenmark_desc: "通过战略营销活动、与旅游业利益相关者的合作以及创新的促销活动，丹麦旅游局旨在吸引来自世界各地的游客，刺激经济增长并提高丹麦作为首要旅游目的地的声誉。"
+ DEN_Increase_Eurosceptism_decision: "主权货币"
+ DEN_Increase_Eurosceptism_decision_desc: "丹麦重申其对其主权货币的承诺，拒绝进一步与欧元区一体化。这一决定强调国家主权和经济独立，表明丹麦对深化欧洲一体化和采用欧元作为官方货币持怀疑态度。"
+ DEN_downcrease_Eurosceptism_decision: "欧元一体化倡议"
+ DEN_downcrease_Eurosceptism_decision_desc: "丹麦采取积极措施与欧元区更紧密地融合，表明其愿意采用欧元作为其官方货币。通过采用共同货币，丹麦旨在加强与欧洲伙伴的经济联系，增强市场稳定性，并促进欧元区内的贸易和投资。"
+ DEN_Bad_Bank_decision: "务实的债务削减策略"
+ DEN_Bad_Bank_decision_desc: "丹麦实行务实的减债方针，分配适度的投资来减少国家债务，同时扩大国际投资。通过平衡财政责任与战略投资，丹麦旨在改善金融稳定性，增强经济竞争力，并吸引外资实现可持续增长。"
+ DEN_Bad_Bank_EZB_decision: "大胆的经济刺激计划"
+ DEN_Bad_Bank_EZB_decision_desc: "丹麦推出了一项大胆的经济刺激计划，投入大量资源来减少国家债务并促进国际投资。通过向战略部门和基础设施项目注入资金，丹麦旨在振兴经济、创造就业机会并吸引外国投资者，将自己定位为全球市场创新和增长的活力中心。"
+ DEN_visitdenmark_category: "丹麦旅游局"
+ DEN_visitdenmark_category_desc: "丹麦旅游局的成立代表了丹麦政府为促进旅游业并向世界展示该国丰富的文化遗产、自然美景和充满活力的城市生活而做出的共同努力。"
+ DEN_TV_campain: "发起电视宣传活动"
+ DEN_Print_campain: "发起纸媒宣传活动"
+ DEN_socialmedia_campain: "发起社交媒体宣传活动"
+ DEN_controversal_campain: "发起有争议的宣传活动"
+ DEN_controversal_campain_tt: "有争议的宣传活动可能会取得巨大成功，也可能会彻底失败，但没有风险，没有乐趣。"
+ DEN_socialmedia_campain_tt: "社交媒体宣传活动涉及很多人，因此风险很低，成功的机会也很大。"
+ DEN_Print_campain_tt: "可以发起平面媒体宣传活动，风险低，但回报也高。"
+ DEN_TV_campain_tt: "电视宣传活动可以吸引很多人，但已经没什么特别的了。"
+ DEN_found_Alternatived_tt: "建立§Y另类选择§!"
+ DEN_found_Nye_Borgerlige_tt: "建立§Y新右派§!"
+ DEN_found_New_Aliance_tt: "建立§Y新同盟§!"
+ DEN_idea_Welfare_State: "福利国家"
+ DEN_idea_Welfare_State_desc: "福利国家是丹麦社会的重要组成部分，目的是让我们社会的主要部分保持在中产阶级。"
+ DEN_idea_Welfare_State1: "丹麦极简国家"
+ DEN_idea_Welfare_State1_desc: "丹麦的极简国家模式与其他国家略有不同，但我们试图尽可能降低成本，同时保持人民的支持。"
+ DEN_idea_Welfare_State2: "改革后的福利国家"
+ DEN_idea_Welfare_State2_desc: "福利国家是丹麦社会的重要组成部分，目的是让我们社会的主要部分保持在中产阶级，但我们需要改变一些部分以维持其运行。"
